--- a/TA-zscaler-api/default/data/ui/views/audit_logs.xml
+++ b/TA-zscaler-api/default/data/ui/views/audit_logs.xml
@@ -1,4 +1,4 @@
-<form>
+<form version="1.1">
   <label>Audit logs</label>
   <description>This dashboard is used to monitor audit logs from scripts</description>
   <fieldset submitButton="false">
@@ -16,7 +16,7 @@
       <table>
         <search>
           <query>index=_internal source="*ta_zscaler_api_zscaler_zpa_configurations.log"
-| rex field="_raw" "^\d+\-\d+\-\d+ \d+:\d+:\d+,\d+ (?&lt;level&gt;[^ ]+) pid=\d+ tid=[^ ]+ file=[^ ]+ \| (?&lt;signature&gt;.*)"
+| rex field="_raw" "^\d+\-\d+\-\d+ \d+:\d+:\d+,\d+ (?&lt;level&gt;[^ ]+) pid=(?&lt;pid&gt;[^ ]+) tid=[^ ]+ file=[^ ]+ \| (?&lt;signature&gt;.*)"
 | sort 0 -_time
 | table _time pid level signature
 | rename pid as PID, level as Level, signature as "Signature"</query>
