--- a/TA-zscaler-api/default/data/ui/views/zpa__policies.xml
+++ b/TA-zscaler-api/default/data/ui/views/zpa__policies.xml
@@ -1,4 +1,4 @@
-<form>
+<form version="1.1">
   <label>ZPA - Policies</label>
   <description>This dashboard is used to recover informations about the policies</description>
   <search id="last_input_data">
