--- a/TA-zscaler-api/default/data/ui/views/zpa__policies.xml
+++ b/TA-zscaler-api/default/data/ui/views/zpa__policies.xml
@@ -2,18 +2,33 @@
   <label>ZPA - Policies</label>
   <description>This dashboard is used to recover informations about the policies</description>
   <search id="last_input_data">
-    <query>index=* sourcetype="zscaler:api:zpa"
-| stats latest(_time) as _time
-| eval earliest = round(relative_time(_time,"-5min"))
-| rename _time as latest</query>
+    <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_instance$:*"
+| rex field=source "z(?:i|p)a:(?&lt;instance&gt;[^:]+):(?&lt;uid&gt;[^:]+):" 
+| stats earliest(_time) as earliest, latest(_time) as latest by uid
+| sort 0 -latest
+| head 1</query>
     <done>
       <condition>
+        <set token="data_uid">$result.uid$</set>
         <set token="data_earliest">$result.earliest$</set>
         <set token="data_latest">$result.latest$</set>
       </condition>
     </done>
   </search>
-  <fieldset submitButton="false"></fieldset>
+  <fieldset submitButton="false">
+    <input type="dropdown" token="zscaler_instance">
+      <label>Zscaler instance</label>
+      <fieldForLabel>instance</fieldForLabel>
+      <fieldForValue>instance</fieldForValue>
+      <search>
+        <query>index=* sourcetype="zscaler:api:zpa"
+| rex field=source "zpa:(?&lt;instance&gt;[^:]+):"
+| stats count by instance</query>
+        <earliest>-24h@h</earliest>
+        <latest>now</latest>
+      </search>
+    </input>
+  </fieldset>
   <row>
     <panel>
       <title>Application Segments - Details</title>
@@ -22,7 +37,7 @@
         <fieldForLabel>segment_group_name</fieldForLabel>
         <fieldForValue>segment_group_name</fieldForValue>
         <search>
-          <query>index=* source="zscalerapi:zpa:app_segments"
+          <query>index=* source="zpa:$zscaler_instance$:$data_uid$:app_segments"
 | stats count by segment_group_name</query>
           <earliest>$data_earliest$</earliest>
           <latest>$data_latest$</latest>
@@ -37,7 +52,7 @@
       <table>
         <title>Click on one application segments to filter on the below access policies to check which one is used</title>
         <search>
-          <query>index=* source="zscalerapi:zpa:app_segments"
+          <query>index=* source="zpa:$zscaler_instance$:$data_uid$:app_segments"
 | eval tcp_ports = mvzip('tcp_port_range{}.from','tcp_port_range{}.to',"-"), tcp_ports = mvmap(tcp_ports,"(TCP) "+tcp_ports), udp_ports = mvzip('udp_port_range{}.from','udp_port_range{}.to',"-"), udp_ports = mvmap(udp_ports,"(UDP) "+udp_ports), ports = mvappend(tcp_ports,udp_ports)
 | search segment_group_name="$filter_segment_group_app_segment$"
 | where match('domain_names{}',"$filter_domain_names_regexp$")
@@ -51,6 +66,7 @@
         <option name="dataOverlayMode">none</option>
         <option name="drilldown">cell</option>
         <option name="percentagesRow">false</option>
+        <option name="refresh.display">progressbar</option>
         <option name="rowNumbers">false</option>
         <option name="totalsRow">false</option>
         <option name="wrap">true</option>
@@ -77,7 +93,7 @@
         <fieldForLabel>name</fieldForLabel>
         <fieldForValue>name</fieldForValue>
         <search>
-          <query>index=* source="zscalerapi:zpa:policies*" policy_type=1
+          <query>index=* source="zpa:$zscaler_instance$:$data_uid$:policies*" policy_type=1
 | stats count by name</query>
           <earliest>$data_earliest$</earliest>
           <latest>$data_latest$</latest>
@@ -90,7 +106,7 @@
         <fieldForLabel>saml</fieldForLabel>
         <fieldForValue>saml_name</fieldForValue>
         <search>
-          <query>index=* source="zscalerapi:zpa:policies*" policy_type=1
+          <query>index=* source="zpa:$zscaler_instance$:$data_uid$:policies*" policy_type=1
 | eval conditions = mvzip('conditions{}.operands{}.name',mvzip('conditions{}.operands{}.rhs','conditions{}.operands{}.object_type',";;"),";;"), saml = mvfilter(match(conditions,";;SAML$$")), saml = mvmap(saml,mvindex(split(saml,";;"),1)+";;"+mvindex(split(saml,";;"),0)+" ("+mvindex(split(saml,";;"),1)+")")
 | mvexpand saml
 | eval saml = split(saml,";;"), saml_name = mvindex(saml,1), saml = mvindex(saml,0)
@@ -112,7 +128,7 @@
         <fieldForLabel>name</fieldForLabel>
         <fieldForValue>name</fieldForValue>
         <search>
-          <query>index=* source="zscalerapi:zpa:app_segments"
+          <query>index=* source="zpa:$zscaler_instance$:$data_uid$:app_segments"
 | stats count by name</query>
           <earliest>$data_earliest$</earliest>
           <latest>$data_latest$</latest>
@@ -125,7 +141,7 @@
         <fieldForLabel>name</fieldForLabel>
         <fieldForValue>name</fieldForValue>
         <search>
-          <query>index=* source="zscalerapi:zpa:segment_groups*"
+          <query>index=* source="zpa:$zscaler_instance$:$data_uid$:segment_groups*"
 | stats count by name</query>
           <earliest>$data_earliest$</earliest>
           <latest>$data_latest$</latest>
@@ -135,7 +151,7 @@
       </input>
       <table>
         <search>
-          <query>index=* source="zscalerapi:zpa:policies*" policy_type=1
+          <query>index=* source="zpa:$zscaler_instance$:$data_uid$:policies*" policy_type=1
 | eval conditions = mvzip('conditions{}.operands{}.name',mvzip('conditions{}.operands{}.rhs','conditions{}.operands{}.object_type',";;"),";;"), apps = mvfilter(match(conditions,";;APP$$")), apps = mvmap(apps,mvindex(split(apps,";;"),0)), saml = mvfilter(match(conditions,";;SAML$$")), saml = mvmap(saml,mvindex(split(saml,";;"),0)+" ("+mvindex(split(saml,";;"),1)+")"), app_groups = mvfilter(match(conditions,";;APP_GROUP$$")), app_groups = mvmap(app_groups,mvindex(split(app_groups,";;"),0))
 | fillnull value="-" apps saml app_groups
 | search name = "$filter_rule_name$" AND (apps = "$filter_app_segment$" $operand$ app_groups = "$filter_segment_group$") AND saml = "$filter_saml$"
