--- a/TA-zscaler-api/default/data/ui/views/zpa_admin_guide.xml
+++ b/TA-zscaler-api/default/data/ui/views/zpa_admin_guide.xml
@@ -6,20 +6,40 @@
     <set token="ref_tool">zpa</set>
   </init>
   <search id="last_input_data">
-    <query>index=* sourcetype="zscaler:api:zpa"
-| stats latest(_time) as _time
-| eval earliest = round(relative_time(_time,"-24h"))
-| rename _time as latest</query>
+    <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_instance$:*"
+| rex field=source "z(?:i|p)a:(?&lt;instance&gt;[^:]+):(?&lt;uid&gt;[^:]+):" 
+| stats earliest(_time) as earliest, latest(_time) as latest by uid
+| sort 0 -latest
+| head 1</query>
     <done>
       <condition>
+        <set token="data_uid">$result.uid$</set>
         <set token="data_earliest">$result.earliest$</set>
         <set token="data_latest">$result.latest$</set>
       </condition>
     </done>
   </search>
   <fieldset submitButton="false">
-    <input type="text" token="account">
-      <label>Username (under "Configuration:Username")</label>
+    <input type="dropdown" token="zscaler_instance">
+      <label>Zscaler instance</label>
+      <fieldForLabel>instance</fieldForLabel>
+      <fieldForValue>instance</fieldForValue>
+      <search>
+        <query>index=* sourcetype="zscaler:api:zpa"
+| rex field=source "zpa:(?&lt;instance&gt;[^:]+):"
+| stats count by instance</query>
+        <earliest>-24h@h</earliest>
+        <latest>now</latest>
+      </search>
+    </input>
+    <input type="dropdown" token="account">
+      <label>Account Username</label>
+      <fieldForLabel>username</fieldForLabel>
+      <fieldForValue>username</fieldForValue>
+      <search>
+        <query>| rest /servicesNS/nobody/TA-zscaler-api/configs/conf-ta_zscaler_api_account
+| table username</query>
+      </search>
     </input>
   </fieldset>
   <row>
@@ -57,7 +77,7 @@
         <fieldForLabel>name</fieldForLabel>
         <fieldForValue>id</fieldForValue>
         <search>
-          <query>index=* sourcetype="zscaler:api:zpa" source="zscalerapi:zpa:segment_groups:*"
+          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_instance$:$data_uid$:segment_groups:*"
 | stats count by id, name
 | sort 0 name</query>
           <earliest>$data_earliest$</earliest>
@@ -69,7 +89,7 @@
         <fieldForLabel>name</fieldForLabel>
         <fieldForValue>id</fieldForValue>
         <search>
-          <query>index=* sourcetype="zscaler:api:zpa" source="zscalerapi:zpa:server_groups"
+          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_instance$:$data_uid$:server_groups"
 | stats count by id, name
 | sort 0 name</query>
           <earliest>$data_earliest$</earliest>
@@ -119,7 +139,7 @@
         <fieldForLabel>name</fieldForLabel>
         <fieldForValue>id</fieldForValue>
         <search>
-          <query>index=* sourcetype="zscaler:api:zpa" source="zscalerapi:zpa:app_segments"
+          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_instance$:$data_uid$:app_segments"
 | stats count by id, name
 | sort 0 name</query>
           <earliest>$data_earliest$</earliest>
@@ -152,7 +172,7 @@
         <fieldForLabel>name</fieldForLabel>
         <fieldForValue>id</fieldForValue>
         <search>
-          <query>index=* sourcetype="zscaler:api:zpa" source="zscalerapi:zpa:app_segments"
+          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_instance$:$data_uid$:app_segments"
 | stats count by id, name
 | sort 0 name</query>
           <earliest>$data_earliest$</earliest>
