--- a/TA-zscaler-api/default/data/ui/views/zpa_admin_guide.xml
+++ b/TA-zscaler-api/default/data/ui/views/zpa_admin_guide.xml
@@ -6,8 +6,8 @@
     <set token="ref_tool">zpa</set>
   </init>
   <search id="last_input_data">
-    <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_instance$:*"
-| rex field=source "z(?:i|p)a:(?&lt;instance&gt;[^:]+):(?&lt;uid&gt;[^:]+):" 
+    <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_input$:*"
+| rex field=source "z(?:i|p)a:(?&lt;input&gt;[^:]+):(?&lt;uid&gt;[^:]+):" 
 | stats earliest(_time) as earliest, latest(_time) as latest by uid
 | eval latest = relative_time(latest,"+1s")
 | sort 0 -latest
@@ -21,14 +21,21 @@
     </done>
   </search>
   <fieldset submitButton="false">
-    <input type="dropdown" token="zscaler_instance">
-      <label>Zscaler instance</label>
-      <fieldForLabel>instance</fieldForLabel>
-      <fieldForValue>instance</fieldForValue>
+    <input type="dropdown" token="instances">
+      <label>Instances</label>
+      <choice value="1">Instance 1</choice>
+      <choice value="2">Instance 2</choice>
+      <choice value="3">Instance 3</choice>
+      <default>1</default>
+    </input>
+    <input type="dropdown" token="zscaler_input">
+      <label>Zscaler Input</label>
+      <fieldForLabel>input</fieldForLabel>
+      <fieldForValue>input</fieldForValue>
       <search>
-        <query>index=* sourcetype="zscaler:api:zpa"
-| rex field=source "zpa:(?&lt;instance&gt;[^:]+):"
-| stats count by instance</query>
+        <query>index=* sourcetype="zscaler:api:zia"
+| rex field=source "zpa:(?&lt;input&gt;[^:]+):"
+| stats count by input</query>
         <earliest>-24h@h</earliest>
         <latest>now</latest>
       </search>
@@ -78,7 +85,7 @@
         <fieldForLabel>name</fieldForLabel>
         <fieldForValue>id</fieldForValue>
         <search>
-          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_instance$:$data_uid$:segment_groups:*"
+          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_input$:$data_uid$:segment_groups:*"
 | stats count by id, name
 | sort 0 name</query>
           <earliest>$data_earliest$</earliest>
@@ -90,7 +97,7 @@
         <fieldForLabel>name</fieldForLabel>
         <fieldForValue>id</fieldForValue>
         <search>
-          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_instance$:$data_uid$:server_groups"
+          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_input$:$data_uid$:server_groups"
 | stats count by id, name
 | sort 0 name</query>
           <earliest>$data_earliest$</earliest>
@@ -128,8 +135,9 @@
         <br/>
         <p>
           <b>Create an application segment using this command</b>: (Ref: <a href="$ref_url$/$ref_tool$/app_segments.py#L61" target="_blank">app_segments.py#L61</a>)</p> 
-        <p>| makeresults | eval name = "$app_segment_create_name$", domain_names = "$app_segment_create_domain_names$", $app_segment_create_port_type$_ports = "$app_segment_create_tcp_ports$", bypass_type = "$app_segment_create_bypass_type$", segment_group_id = "$app_segment_create_segment_group_id$", server_group_ids = "$app_segment_create_server_group_ids$", description = "$app_segment_create_description$" | sendalert zscaler_zpa_action param.account_username="$account$" param.action="create_app_segment"</p>
+        <p>| makeresults | eval name = "$app_segment_create_name$", domain_names = "$app_segment_create_domain_names$", $app_segment_create_port_type$_ports = "$app_segment_create_tcp_ports$", bypass_type = "$app_segment_create_bypass_type$", segment_group_id = "$app_segment_create_segment_group_id$", server_group_ids = "$app_segment_create_server_group_ids$", description = "$app_segment_create_description$" | sendalert zscaler_zpa_action param.instances=$instances$ param.account_usernames="{\"$instances$\": \"$account$\"}" param.action="create_app_segment"</p>
         <br/>
+        <p>Note: Please note that the example is only for one instance, but you can add several instances at the same time by specifying the instances separated by a comma and complete the account_usernames dictionnary</p>
       </html>
     </panel>
   </row>
@@ -140,7 +148,7 @@
         <fieldForLabel>name</fieldForLabel>
         <fieldForValue>id</fieldForValue>
         <search>
-          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_instance$:$data_uid$:app_segments"
+          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_input$:$data_uid$:app_segments"
 | stats count by id, name
 | sort 0 name</query>
           <earliest>$data_earliest$</earliest>
@@ -161,8 +169,9 @@
         <br/>
         <p>
           <b>Update an application segment using this command</b>: (here, only the name and description) (Ref: <a href="$ref_url$/$ref_tool$/app_segments.py#L150" target="_blank">app_segments.py#L150</a>)</p>
-        <p>| makeresults | eval segment_id = "$app_segment_update_app_segment_id$" | sendalert zscaler_zpa_action param.account_username="$account$" param.action="update_app_segment"</p>
+        <p>| makeresults | eval segment_id = "$app_segment_update_app_segment_id$" | sendalert zscaler_zpa_action param.instances=$instances$ param.account_usernames="{\"$instances$\": \"$account$\"}" param.action="update_app_segment"</p>
         <br/>
+        <p>Note: Please note that the example is only for one instance, but you can add several instances at the same time by specifying the instances separated by a comma and complete the account_usernames dictionnary</p>
       </html>
     </panel>
   </row>
@@ -173,7 +182,7 @@
         <fieldForLabel>name</fieldForLabel>
         <fieldForValue>id</fieldForValue>
         <search>
-          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_instance$:$data_uid$:app_segments"
+          <query>index=* sourcetype="zscaler:api:zpa" source="zpa:$zscaler_input$:$data_uid$:app_segments"
 | stats count by id, name
 | sort 0 name</query>
           <earliest>$data_earliest$</earliest>
@@ -189,7 +198,9 @@
         <br/>
         <p>
           <b>Delete an application segment using this command</b>: (Ref: <a href="$ref_url$/$ref_tool$/app_segments.py#L44" target="_blank">app_segments.py#L44</a>)</p>
-        <p>| makeresults | eval segment_id = "$app_segment_delete_app_segment_id$" | sendalert zscaler_zpa_action param.account_username="$account$" param.action="delete_app_segment"</p>
+        <p>| makeresults | eval segment_id = "$app_segment_delete_app_segment_id$" | sendalert zscaler_zpa_action param.instances=$instances$ param.account_usernames="{\"$instances$\": \"$account$\"}" param.action="delete_app_segment"</p>
+        <br/>
+        <p>Note: Please note that the example is only for one instance, but you can add several instances at the same time by specifying the instances separated by a comma and complete the account_usernames dictionnary</p>
       </html>
     </panel>
   </row>
