--- a/TA-zscaler-api/default/data/ui/views/zpa__policies.xml
+++ b/TA-zscaler-api/default/data/ui/views/zpa__policies.xml
@@ -7,6 +7,8 @@
 | stats earliest(_time) as earliest, latest(_time) as latest by uid
 | sort 0 -latest
 | head 1</query>
+    <earliest>-1mon</earliest>
+    <latest>now</latest>
     <done>
       <condition>
         <set token="data_uid">$result.uid$</set>
